...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/nameCreateNewProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="15"
        android:textColor="@color/white"
        android:hint="@string/nameCreateNewProject"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateNewProject"
        app:layout_constraintVertical_bias="0.03" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DateLayout"
        android:layout_width="310dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_weight="1"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateCreateNewProject"
            android:clickable="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/dateEdt"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_date_range_black_24dp"
            android:drawableTint="@color/white"
            android:focusable="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGray"
        android:onClick="submitbuttonHandler"
        android:text="SUBMIT"
        android:textColor="#302E3B"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateLayout" />
...
