<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#302E3B">


    <include
        layout="@layout/header"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewCostoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="314dp"
        android:text="Nombre del proveedor"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/nameCosto"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint=""
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="12dp"
        app:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCostoNombre" />

    <TextView
        android:id="@+id/textViewCostoMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="314dp"
        android:text="Costo del proveedor"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/montoCosto"
        android:inputType="number"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint=""
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="12dp"
        app:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCostoMonto" />






    <com.google.android.material.button.MaterialButton
        android:id="@+id/savecostoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="126dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/gradent_horizontal"
        android:text="Agregar Proveedor"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <include
        layout="@layout/navbar"
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>